# 1C_inter_task

./: CMakeLists.txt  README.md  cards.cpp  cards.hpp  main.cpp  test.cpp
